Resolve restartGame bug

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <button class="btnSquare" id="scissorsBtn">SCISSORS</button>
 
         </div>
+        <div id="hiddenBtn">
+            <button class="btnSquare" id="restartGame">RESTART</button>
+        </div>
 
     </div>
 </body>
