--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <script src="app.js" defer></script>
 </head>
 <body>
@@ -12,8 +15,8 @@
 
     </div>
     <div class="container">
+        <h3 id="scoreInfo">CHOOSE YOUR WEAPON</h3>
         <div class="scoreboard">
-            <h3 id="scoreInfo">Choose Your Weapon</h3>
             <h4 id="scorePlay">Play out of five rounds to win!</h4>
             <div class="scoreContainer">
                 <div class="scoreBox">
