Update buttons and add header/footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <div class="header">
-
+        <h3 id="headerText">
+            ROCK PAPER SCISSORS
+        </h3>
     </div>
     <div class="container">
         <h3 id="scoreInfo">CHOOSE YOUR WEAPON</h3>
@@ -30,15 +32,17 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="btnSquare" id="rockBtn">ROCK</button>
-            <button class="btnSquare" id="paperBtn">PAPER</button>
-            <button class="btnSquare" id="scissorsBtn">SCISSORS</button>
+            <button class="btnSquare" id="rockBtn"><span>ROCK</span></button>
+            <button class="btnSquare" id="paperBtn"><span>PAPER</span></button>
+            <button class="btnSquare" id="scissorsBtn"><span>SCISSORS</span></button>
 
         </div>
         <div id="hiddenBtn">
-            <button class="btnSquare" id="restartGame">RESTART</button>
+            <button class="btnSquare" id="restartGame"><span>RESTART</span></button>
         </div>
-
     </div>
+    <footer class="footerText">
+        Made by Jeff Stanley
+    </footer>
 </body>
 </html>
